<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DateValidator</string>
    <string name="action_settings">Settings</string>
    <string name="categorypicker_title">Category</string>
    <string name="charcuterie">Charcuterie</string>
    <string name="freezer">Freezer</string>
    <string name="cheese">Cheese</string>
    <string name="nutrition">Nutrition</string>
    <string name="dairy">Dairy</string>
    <string name="date">Thursday 11/12/2014</string>
    <string name="pate">Ovengebakken paté AOSTE</string>
    <string name="rundsvlees">Gerookt rundsvlees</string>
    <string name="vleesbrood">Vleesbrood mosterd</string>
    <string name="salami">Ardense salami</string>
    <string name="hespeworst">Hespeworst Weight Watchers</string>
    <string name="start_title">Date check</string>
    <string name="overzicht">Summary</string>
    <string name="nieuwe_lijst">New list</string>
    <string name="proxy">Proxy Delhaize Sint-Denijs</string>
    <string name="scan">Scan</string>
    <string name="barcode">Barcode</string>
    <string name="naam">Name</string>
    <string name="hope">HOPE</string>
    <string name="datum">Date</string>
    <string name="voegtoe">Add</string>
    <string name="verwijder">Delete</string>
    <string name="vorig">Previous product</string>
    <string name="frigo">Fridge</string>
    <string name="volgendeFrigo">Next fridge</string>
    <string name="vorigeFrigo">Previous fridge</string>
    <string name="ep_hint">The hope number of this product is </string>
    <string name="barcode_hint">5400112230008</string>
    <string name="name_hint">PIZZA MARGHERITA</string>
    <string name="hope_hint">373000</string>
    <string name="default_day">01</string>
    <string name="slash">/</string>
    <string name="default_month">01</string>
    <string name="default_year">2015</string>
    <string name="splash">Loading products, creating lists</string>
    <string name="err_short_ean">Enter a barcode of at least 8 ciphers</string>
    <string name="err_short_name">Enter a name of at least 5 letters</string>
    <string name="err_negative_hope">Please enter a positive hope number</string>
</resources>
