<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#686868"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_charcuterie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="#ffff35"
        android:gravity="center_horizontal"
        android:text="@string/cheese"
        android:textColor="#000"
        android:textSize="@dimen/title"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@id/barcodelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/barcode"
            android:textColor="#fff"
            android:textSize="@dimen/small_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/barcodeInput"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:background="#87f717"
            android:text="@string/scan"
            android:textColor="#000"
            android:textSize="@dimen/small_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/barcodelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/naam"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/naam"
            android:textColor="#fff"
            android:textSize="@dimen/small_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/naamInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@id/merklayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/merk"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/merk"
            android:textColor="#fff"
            android:textSize="@dimen/small_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/merkInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@id/datumlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/datum"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/datum"
            android:textColor="#fff"
            android:textSize="@dimen/small_title"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#fff"  />
    </LinearLayout>
    
    <LinearLayout
        android:id="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" 
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:background="#87f717"
            android:text="@string/voegtoe"
            android:textColor="#000"
            android:textSize="@dimen/small_title" />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:background="#C11B17"
            android:text="@string/verwijder"
            android:textColor="#fff"
            android:textSize="@dimen/small_title" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" 
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:background="#659EC7"
            android:text="@string/vorig"
            android:textColor="#000"
            android:textSize="@dimen/small_title" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" 
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:background="#fff"
            android:text="@string/vorigeFrigo"
            android:textColor="#000"
            android:textSize="@dimen/small_title" />
        
        <TextView
            android:id="@+id/frigo"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:text="@string/frigo"
            android:textColor="#fff"
            android:textSize="@dimen/small_title"
            android:textStyle="bold" />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:background="#fff"
            android:text="@string/volgendeFrigo"
            android:textColor="#000"
            android:textSize="@dimen/small_title" />
        
    </LinearLayout>

</LinearLayout>