<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#686868">

    <LinearLayout
        android:id="@+id/CategoriesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_startMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:gravity="center_horizontal"
            android:text="@string/start_title"
            android:textSize="@dimen/title"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/great_margin"
            android:layout_marginRight="@dimen/great_margin"
            android:layout_marginTop="@dimen/great_margin"
            android:layout_marginBottom="@dimen/great_margin"
            android:background="#fff"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="@dimen/small_title"
            android:gravity="center_horizontal"
            android:text="@string/charcuterie"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/great_margin"
            android:layout_marginRight="@dimen/great_margin"
            android:layout_marginTop="@dimen/great_margin"
            android:layout_marginBottom="@dimen/great_margin"
            android:background="#fff"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="@dimen/small_title"
            android:gravity="center_horizontal"
            android:text="@string/charcuterie"/>
        
        <TextView
            android:id="@+id/proxy"            
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:gravity="center_horizontal"
            android:text="@string/proxy"
            android:textSize="@dimen/small_title"
            android:textColor="#fff"
            android:textStyle="bold"/>
        
    </LinearLayout>

</ScrollView>
